@@ -403,8 +403,14 @@ hShop IDで検索
 無効なコンテンツタイプ
 
 - theme_installed
-テーマがインストールされました。 参照してください 
+テーマがインストールされました。 参照してください
 
 - file_installed
 ファイルがインストールされました。 これらはホームメニューには表示されません
+
+- allow_led
+LEDステータスインジケータを有効にする
+
+- allow_led_desc
+これにより、LEDライトが点滅し、タイトルのインストールが完了したときなど、さまざまなステータスの変更を通知します。
 
