@@ -408,3 +408,9 @@ hShop IDで検索
 - file_installed
 ファイルがインストールされた。 これらはホームメニューには表示されまへん
 
+- allow_led
+LEDステータスインジケータを有効にする
+
+- allow_led_desc
+これにより、LEDライトが点滅し、タイトルのインストールが完了したときやら、さまざまなステータスの変更を通知する。
+
