@@ -5,7 +5,7 @@
 Се ынкаркэ...
 
 - luma_not_installed
-О версиуне де систем а фост детектатэ.
+О версиуне де систем несупортатэ а фост детектатэ.
 
 - install_luma
 3hs ну пуате фй фолосит пе ачест систем.
@@ -38,7 +38,7 @@ PAGE_3HS
 Нуме
 
 - tid
-ID де титлу
+Title ID
 
 - category
 Категорие
