@@ -403,8 +403,14 @@ hShop IDっし検索
 無効なコンテンツタイプ
 
 - theme_installed
-テーマぬインストールさりやびたん。 参照しくぃみそーれー 
+テーマぬインストールさりやびたん。 参照しくぃみそーれー
 
 - file_installed
 ファイルぬインストールさりやびたん。 くりらーホームメニューんかえー表示さりやびらん
+
+- allow_led
+LEDステータスインジケータ有効なすん
+
+- allow_led_desc
+くりにゆり、LEDライトぬ点滅しー、タイトルぬインストールぬしーうわたるとぅちんでー、さまざまなステータスぬ変更しらさびーん。
 
